--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -848,7 +848,7 @@ The OVW Group's reconstruction of St Andrews cathedral, as shown in figures \ref
 
 %The MAX-6 was operated in `pedestrian' dynamic platform model, use of SBAS correction data was enabled and frequency of readings was set to the maximum of 5Hz.
 
-For the purposes of testing VTW at the cathedral, a temporary server and network setup was effected using a Lenovo ThinkPad X61s\thinkpadFootnote{} laptop computer to host the OpenSim server with a Linksys WRT54G\wrtFootnote{} wireless router powered from a 12V sealed lead-acid battery to provide wireless communication between the OpenSim server and the WindPad over a much larger range than the laptop's internal wireless interface could provide. This setup is shown in use at the cathedral by figure \ref{pangolin_laptop_router_battery.jpg}, the architecture of this experimental implementation is shown by figure \ref{vtw_implementation.png} and figure \ref{vtw_in_use.jpg} shows VTW in use at the cathedral.
+For the purposes of testing VTW at the cathedral, a temporary server and network setup was effected using a Lenovo ThinkPad X61s\thinkpadFootnote{} laptop computer to host the OpenSim server. This was connected to a Linksys WRT54G\wrtFootnote{} wireless router, powered from a 12V sealed lead-acid battery, to provide wireless communication between the OpenSim server and the WindPad over a much larger range than the laptop's internal wireless interface could provide. This setup is shown in use at the cathedral by figure \ref{pangolin_laptop_router_battery.jpg}, the architecture of this experimental implementation is shown by figure \ref{vtw_implementation.png} and figure \ref{vtw_in_use.jpg} shows VTW in use at the cathedral.
 
 \TwoFig{pangolin_laptop_router_battery.jpg} {OpenSim Server and wireless AP used for VTW experiments.} {pangolin_laptop_router_battery.jpg}
        {vtw_in_use.jpg} {VTW in use at St Andrews cathedral.} {vtw_in_use.jpg}
@@ -878,7 +878,7 @@ For the purposes of testing VTW at the cathedral, a temporary server and network
 
 The product summary for the MAX-6 claims accuracy of 2.5m Circular Error Probable (CEP) without SBAS corrections and 2m CEP with SBAS corrections \textit{``demonstrated with a good active antenna''}\ubloxcepFootnote{}. This means that in an ideal situation with SBAS correction data available there is 50\% certainty that each position reported by the GPS receiver will be within 2m of its actual position. The SL-1202 antenna used by VTW is passive, however as the distance between antenna and the MAX-6 IC itself in the hardware application is only a few millimeters there would be negligible benefit from using an active antenna. Whether the SL-1202 constitutes `good' for achieving the headlining performance characteristics of the MAX-6 is debatable as the definition of `good' is not provided in the product summary.
 
-To determine the real world accuracy attainable with the MAX-6 outfitted with the SL-1202 in the scenario of the cathedral as a cultural heritage site and thus which of the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage} the VTW platform can support, a route around the St Andrews cathedral ruins akin to the route that a visitor might take was walked with the MAX-6 connected to a laptop computer via an Arduino operating as a UART feeding the raw NMEA messages into the u-center software version 7.0 which logged the messages for later evaluation. Simultaneously for comparative purposes a mid-range consumer Android smartphone of the era was used to record the same track; a HTC One S\htconesFootnote{} containing a gpsOne Gen 8A solution within its Qualcomm Snapdragon S4 processor\snapdragonFootnote{} and using Google's My Tracks\mytracksFootnote{} app version 2.0.3 to record the data.
+To determine the real world accuracy attainable with the MAX-6 outfitted with the SL-1202 in the scenario of the cathedral as a cultural heritage site and thus which of the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage} the VTW platform can support, a route around the St Andrews cathedral ruins akin to the route that a visitor might take was planned. The route was walked with the MAX-6 connected to a laptop computer via an Arduino operating as a UART, feeding the raw NMEA messages into the u-center software version 7.0 which logged the messages for later evaluation. Simultaneously for comparative purposes a mid-range consumer Android smartphone was used to record the same track: a HTC One S\htconesFootnote{} containing a gpsOne Gen 8A solution within its Qualcomm Snapdragon S4 processor\snapdragonFootnote{} and using Google's My Tracks\mytracksFootnote{} app version 2.0.3 to record the data.
 
 The three sets of positional data (planned route, MAX-6 recorded route and smartphone recorded route) were entered into a PostgreSQL database and the PostGIS database extender's \texttt{ST\_HausdorffDistance} algorithm\hausdorffFootnote{} was used to calculate the Hausdorff distances between the recorded routes and the planned route and between the recorded routes themselves. In this scenario, the Hausdorff distance represents the furthest distance needed to travel from any point on the route recorded by the GPS receiver to reach the nearest point on the planned route. Because of the substantially greater inaccuracies identified in the latter part of the recorded tracks, separate Hausdorff distances were calculated both for the complete tracks and also for truncated first and second sub-tracks.
 
@@ -919,7 +919,7 @@ When analyzing the sub-track in the vicinity of the nave (see figure \ref{vtw_al
 
 In addition to the accuracy of the position tracking it is also important to consider the frequency and granularity of these data. Even if the position data used by a freeform explorative parallel reality system were extremely accurate the experience of using that platform would be poor if these data were reported too infrequently, as it would either lead to `jumpy' movement where the virtual view had to move a substantial distance to match each newly reported real position, or a reliance upon dead-reckoning to predict the user's movement between subsequent data. Likewise even with accurate and frequently reported position data, if the granularity of these data is not especially fine then the experience of using the platform will be negatively impacted by an inability to make small real movements and see them reflected as similarly small virtual movements when trying to pay attention to specific aspects of the environments.
 
-Throughout the test route the HTC One S reported only 27 positions. This would have resulted in extremely large virtual movements if used for VTW and the low granularity of these positions (as seen in figure \ref{vtwpositiondeltas.png} would have meant that the user would've found it frustratingly difficult to match real world movements to virtual world equivalents in any sort of freeform exploration scenario. The MAX-6 performed substantially better in these regards, reporting 251 positions along the same route and with substantially higher granularity (also shown in figure \ref{vtwpositiondeltas.png}.
+Throughout the test route the HTC One S only reported 27 positions. This would have resulted in extremely large virtual movements if used for VTW and the low granularity of these positions (as seen in figure \ref{vtwpositiondeltas.png} would have meant that the user would've found it frustratingly difficult to match real world movements to virtual world equivalents in any sort of freeform exploration scenario. The MAX-6 performed substantially better in these regards, reporting 251 positions along the same route and with substantially higher granularity (also shown in figure \ref{vtwpositiondeltas.png}.
 
 However when the MAX-6 readings were integrated into the VTW platform and it was tested in its complete form at the cathedral, even though subsequent positions reported by the MAX-6 were usually no more than 1-3m away, they did not `settle' and keep the virtual view in the same position when standing still. Instead new readings in this 1-3m range would continue to be reported and the virtual view would continue to move even while the user was standing stationary in the real world.
 
@@ -959,7 +959,7 @@ When considering the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the
 
 Considering the first scenario of static viewpoints this level of positional accuracy is plenty sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
 
-Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway, nor to examine an object closely when standing still due to the manner in which the position data did not `settle', when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size this level of accuracy is sufficient for some freeform exploration. For example when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper, the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 10m does not pose much of a problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent, a relationship observed by Wither et al. when experimenting with indirect augmented reality.
+Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway, nor to examine an object closely when standing still due to the manner in which the position data did not `settle', when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size this level of accuracy is sufficient for some freeform exploration. For example when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper, the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 5m does not pose much of a problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent, a relationship observed by Wither et al. when experimenting with indirect augmented reality.
 
 \begin{quote}
 	\textit{``Our user study results suggest that Indirect AR does very well in outdoor applications where the user is more than a few meters away from the physical objects of interest.''}~\cite{Wither2011}
@@ -983,14 +983,14 @@ Revisiting the definition of parallel reality, one can consider it to be disting
 	\item The experiential aspect - can the user freely switch between the environments?
 \end{enumerate}
 
-Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, the experience of using the system at St Andrews Cathedral fell somewhat short of the vision for the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment in VTW was instead seen as a window within the wider real environment: even when focussing attention upon the virtual environment via the device's screen, one also perceived the real environment around it, filling the majority of the viewport. The experience was more of \textit{mixing} (even if that mixing is performed by the human mind and not by the device), distributing attention by gaze, rather than \textit{switching} to a complete/discrete environment at the exclusion of the other, distributing attention by time.
+Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, the experience of using the system at St Andrews Cathedral fell somewhat short of the vision for the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment in VTW was instead seen as a window within the wider real environment. Even when focussing attention upon the virtual environment via the device's screen, one also perceived the real environment around it, filling the majority of the viewport. The experience was more of \textit{mixing} (even if that mixing was performed by the human mind and not by the device itself), distributing attention by gaze, rather than \textit{switching} to a complete/discrete environment at the exclusion of the other, distributing attention by time.
 
-Both with previous sitsim projects and VTW the user's view is always a mix, never purely virtual, and the user's position upon the locus of attention axis can never reach its virtual reality extreme, due to the fact that the screen is always seen as a part of the larger real environment. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms may clarify how from the point of view of user experience, sitsim projects have been labelled as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
+Both with previous sitsim projects and VTW the user's view is always a mix, never purely virtual, and the user's position upon the locus of attention axis of the combined Milgram/Waterworth model can never reach its virtual reality extreme, due to the fact that the screen is always seen as a part of the larger real environment. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms may clarify how from the point of view of user experience, sitsim projects have been labelled in the past as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
 
 %=========================================================================================================
 
 \section{Summary}
 
-This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was a preliminary foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. VTW provided a real world assessment of the suitability of an interface in the style of previous sitsim projects to serve as a platform for investigation into parallel reality experience. Real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a level of freeform exploration wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the vision upheld by parallel reality proposed.
+This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was a preliminary foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions by leveraging existing OpenSim content. VTW assessed via real world application of the suitability of an interface in the style of previous sitsim projects to serve as a platform for investigation into parallel reality experience. This real world experimentation revealed that while the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a level of freeform exploration wherein a certain distance is maintained between the user and the objects being observed, the experiential aspect of the system was not as novel when compared against previous augmented reality and sitsim projects as the concept of parallel reality had originally envisioned and proposed.
 
 %=========================================================================================================
