--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -214,7 +214,7 @@ For the seated VR scenario log data were recorded while each participant was eng
 %Between the seated VR scenario and the parallel reality scenario comparisons can be made between the VR section of the seated VR scenario and the periods that participants were observing VR in the parallel reality scenario. Log data were not captured for participant 2, nor were they captured for the seated VR scenario for participant 5.
 
 \subsubsection{Comparing seated and parallel reality scenarios}
-
+\label{stage1-seated-vs-parallel-reality}
 When looking at either scenario's data as a whole (the VR section of the seated VR scenario and both RW and VR periods of the parallel reality scenario) it is immediately evident that participants looked to their sides and turned their heads horizontally (yaw) far more than they looked above and beneath themselves by tilting their heads vertically (pitch). An example of this relationship is shown by figure \ref{6_pitch_yaw_2up.png} which shows pitch and yaw plotted against time for participant 6, for both the seated VR scenario and the parallel reality scenario. With the seated VR scenario on the left of the pair of plots and the parallel reality scenario on the right, the variance in yaw (blue) is substantially greater in both than the variance in pitch (red).
 
 %\begin{figure}
@@ -326,6 +326,15 @@ When studying plots of head pitch and yaw against time aligned with plots of dis
 Reluctance to changing head orientation when moving in the seated VR scenario can possibly be explained by something as simple as participant 1 having more experience with video games in which movement and looking direction are controlled independently. For somebody familiar with this style of control it is second nature to use one control to change their position whilst simultaneously using another control to change the direction in which they are looking, however for those unfamiliar or inexperienced with such scenarios it is common to observe alternation between movement and looking, something that the OVW group has observed in users interacting with virtual content at various demonstrations using keyboard and mouse, Xbox controller and other control methodologies. In many video games this simultaneous independent control of head and body is commonly achieved by using keyboard buttons to control body movement while using a mouse to control looking direction, or by using the two separate control sticks of a controller such as an Xbox controller. With the seated VR scenario the Xbox controller provides control over movement while the head tracker in the DK1 provides control over looking direction by tracking head orientation.
 
 Reluctance to changing head orientation when moving in the parallel reality scenario is most logically explained by participants feeling as though with the reduced visual acuity of their RW environment and the discrepancy in position and environmental objects of their VR environment that they needed to pay more conscious attention to their walking, lest they lose their footing. Upon reaching a location of particular interest and standing still, their willingness to perform larger head movements returned as they no longer had to contend with obstacle avoidance.
+
+%=====================
+
+Plots the position data upon the floorplan of the chapel reveal that several participants walked noticeably closer to the altar (far right of the floorplan) during the parallel reality scenario than during the seated scenario. Figures \ref{06-seatedmap.png} (seated scenario) and \ref{06-movmap.png} (parallel reality scenario) show this relationship using participant 6 as an example. The reason for this is not immediately clear; it could be that the real altar presented a more interesting object for observation than its virtual counterpart, so that during the parallel reality scenario in which the real altar was visible participants found themselves drawn to it more than in the seated scenario when only its virtual partner was visible, or it could be that participants who were less accustomed with the control methodology of the seated scenario simply wanted to complete the route as quickly as possible and thus took a more direct route to the `goal'.
+
+\TwoFig{splodge-maps/06-seatedmap.png}{Position data during seated scenario for participant 6.}{06-seatedmap.png}
+       {splodge-maps/06-movmap.png}{Position data during parallel reality scenario for participant 6.}{06-movmap.png}
+
+%=====================
 
 \subsubsection{Comparing RW and VR periods within parallel reality scenario}
 
@@ -810,6 +819,13 @@ For all participants there was once again substantially more yaw change than pit
 
 %=====================
 
+Plots of position data upon the floorplan of the chapel highlight one situation in which the parallel reality scenarios served to restrict participant exploration compared to the seated scenario. During the seated scenario participants could move their virtual vantage through positions that were impossible to move through during the parallel reality scenarios due to the presence of real obstructions. Figures \ref{08-seatedmap.png} (seated scenario) and \ref{08-13map.png} (scenario 1-3) show this relationship using participant 8 as an example. In the seated scenario participant 8 walked around the nave (the open area on the left of the floorplan) however during the parallel reality scenarios they were prevented from doing so due to the presence of rows of chairs set out throughout the real nave and thus were only able to walk down, parallel with one of the rows of chairs, toward the south facing door.
+
+\TwoFig{splodge-maps/08-seatedmap.png}{Position data during parallel reality scenario for participant 8.}{08-seatedmap.png}
+       {splodge-maps/08-13map.png}{Position data during scenario 1-3 for participant 8.}{08-13map.png}
+
+%=====================
+
 \subsubsection{Comparing RW and VR periods within parallel reality scenarios}
 
 When comparing head pitch and yaw data between the RW and VR periods within the two parallel reality scenarios, five out of the seven participants displayed greater variance in yaw when perceiving VR stimuli than when perceiving RW stimuli for both scenario 1-3 and scenario 1-4. Figure \ref{8-1-3-pitch-yaw.png} illustrates an example of this relationship for participant 8 undertaking scenario 1-3 while figure \ref{12-1-4-pitch-yaw.png} illustrates the relationship for participant 12 undertaking scenario 1-4. Again the background colouring of the plots represents whether the participant was perceiving RW or VR visual stimuli at each particular time index, using different colours to indicate which transition style was used to transition to the VR stimuli: pink for transition 1, green for transition 2, yellow for transition 3 and dark blue for transition 4.
@@ -1153,6 +1169,13 @@ Performance of IndoorAtlas throughout both scenario 1-3 (figure \ref{2-1-positio
 
 \TwoFig{2.1/2-1-positiondeltas1-3.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-3.}{2-1-positiondeltas1-3.png}
        {2.1/2-1-positiondeltas1-4.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-4.}{2-1-positiondeltas1-4.png}
+       
+Plots of position data upon the floorplan of the chapel illustrate how these occasional larger displacements could be particularly unpleasant when they coincided with the participant observing the virtual environment, due to the manner in which the virtual vantage would always follow the shortest/most direct path between subsequent positions, `passing through' any virtual obstructions along this path. Figures \ref{10-13map.png} and \ref{10-14map.png} show position data for participant 10 during scenario 1-3 and scenario 1-4 respectively. In scenario 1-3 the position data mostly fall on or close to the recorded IndoorAtlas routes (see figure \ref{sallies-indoor-atlas-routes.png}), however during scenario 1-4 their are position data outwith of these routes and `in the middle' of virtual obstructions. For example, at one point a position was reported within the pews at the North wall of the building. A subsequent position was reported at the door adjacent to the tomb at the East end of the North wall of the building. Whilst both of these positions were occupiable by the participant in both the real and virtual environments, the direct path between them that the virtual environment navigated (and upon which there are several reported positions due to the duration of this virtual movement) was not possible: it required the virtual vantage to pass through the actual seats/backs of the pews and partly through the North wall itself, an unpleasant experience when wearing a HMD.
+
+\TwoFig{splodge-maps/10-13map.png}{Position data during scenario 1-3 for participant 8.}{10-13map.png}
+       {splodge-maps/10-14map.png}{Position data during scenario 1-4 for participant 8.}{10-14map.png}
+
+Where inaccuracies such as these are unavoidable in a parallel reality system, the negative effects that the resulting large movements pose should be minimised. Prudent approaches would be to specify a certain threshold for discrete movements, above which the user is either prevented from viewing virtual stimuli or for which the stimuli are blurred, dimmed or similarly obscured (along with a message/dialogue explaining the situation). Similar checks to prevent or mitigate the effect of the virtual vantage moving through virtual obstructions, even were the total movement is beneath the threshold value, would also be prudent.
 
 %=========================================================================================================
 
@@ -1258,6 +1281,15 @@ Variance in yaw once again dominated head movement for all participants during a
 	\label{14-pitch-yaw-trad-75-25-50-50.png}
 	\end{center}
 \end{figure}
+
+%=====================
+
+Plots of position data upon the chapel floorplan show a similar relationship as was observed of some stage 1 participants (see section \ref{stage1-seated-vs-parallel-reality}) wherein participants approached the altar closely and even walked past it to inspect the far East walls of the chapel during the parallel reality scenarios, but did not do so during the seated scenario. This observation is of particular interest as walking up to the far East walls of the chapel during the parallel reality scenarios involved climbing a single (real) step - an action that intuitively one would think participants would not have enamoured the prospect of due to the nature of the video see-through solution and its associated drawbacks. Figures \ref{16-seatedmap.png} and \ref{16-50map.png} illustrate this relationship using participant 16 as an example, for the seated scenario and the 50/50 scenario respectively.
+
+\TwoFig{splodge-maps/16-seatedmap.png}{Position data during seated scenario for participant 16.}{16-seatedmap.png}
+       {splodge-maps/16-50map.png}{Position data during 50/50 scenario for participant 16.}{16-50map.png}
+
+Whilst one explanation for this behaviour, as touched upon in section \ref{stage1-seated-vs-parallel-reality}, is simply that the combination of real and virtual altar in the parallel reality scenarios drew the participants' attention more than just the virtual altar in the seated scenario did (enough to warrant the challenge of the step), an alternative explanation presents a more intriguing possibility. Many visitors to the chapel display a heightened reverence for the altar, not approaching it too closely nor stepping up to the platform it stands upon, presumably due to an overbearing assumption that it may be construed as disrespectful or against socially accepted etiquette to do so. However with a view that is constantly a mix of a real and a virtual environment, as in the parallel reality scenarios in this stage of the evaluation, it is conceivable that this reduced clarity or less `real' seeming nature of the altar could have led the participants to feel more comfortable to approach it more closely and even to mount its platform.
 
 %=====================
 
