Added best practice about large virtual movements, updated 2-up plot for larger vertical resolution.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -705,7 +705,7 @@ Log data were recorded during all scenarios, however these data were not recorde
 
 \subsubsection{Considering all scenarios (seated VR and both parallel reality scenarios)}
 
-For all participants there was once again substantially more yaw change than pitch change in head movement, in both seated VR and parallel reality scenarios. Figure \ref{2-1-8-pitch-yaw-trad-1-3-1-4.png} shows an example of this relationship by plotting pitch and yaw against time for participant 8 for all three scenarios (seated at left, scenario 1-3 in the middle and scenario 1-4 at right) and the standard deviations for pitch and yaw for all participants across all three scenarios is given by tables \ref{2-1-sd-trad}, \ref{2-1-sd-1-3} and \ref{2-1-sd-1-4}.
+For all participants there was once again substantially more yaw change than pitch change in head movement, in both seated VR and parallel reality scenarios. Figure \ref{2-1-8-pitch-yaw-trad-1-3-1-4.png} shows an example of this relationship by plotting pitch and yaw against time for participant 8 for all three scenarios (seated at left, scenario 1-3 in the middle and scenario 1-4 at right) and the standard deviations for pitch and yaw for all participants across all three scenarios are given by tables \ref{2-1-sd-trad}, \ref{2-1-sd-1-3} and \ref{2-1-sd-1-4}.
 
 \begin{figure}
 	\begin{center}
@@ -819,7 +819,7 @@ For all participants there was once again substantially more yaw change than pit
 
 %=====================
 
-Plots of position data upon the floorplan of the chapel highlight one situation in which the parallel reality scenarios served to restrict participant exploration compared to the seated scenario. During the seated scenario participants could move their virtual vantage through positions that were impossible to move through during the parallel reality scenarios due to the presence of real obstructions. Figures \ref{08-seatedmap.png} (seated scenario) and \ref{08-13map.png} (scenario 1-3) show this relationship using participant 8 as an example. In the seated scenario participant 8 walked around the nave (the open area on the left of the floorplan) however during the parallel reality scenarios they were prevented from doing so due to the presence of rows of chairs set out throughout the real nave and thus were only able to walk down, parallel with one of the rows of chairs, toward the south facing door.
+Plots of position data upon the floorplan of the chapel highlight one situation in which the parallel reality scenarios served to restrict participant exploration compared to the seated scenario. During the seated scenario participants could move their virtual vantage through positions that were impossible to move through during the parallel reality scenarios due to the presence of real obstructions. Figures \ref{08-seatedmap.png} (seated scenario) and \ref{08-13map.png} (scenario 1-3) show this relationship using participant 8 as an example. In the seated scenario participant 8 walked around the nave (the open area on the left of the floorplan) however during the scenario 1-3 they were prevented from doing so due to the presence of rows of chairs set out throughout the real nave and thus were only able to walk down, parallel with one of the rows of chairs, toward the south facing door.
 
 \TwoFig{splodge-maps/08-seatedmap.png}{Position data during parallel reality scenario for participant 8.}{08-seatedmap.png}
        {splodge-maps/08-13map.png}{Position data during scenario 1-3 for participant 8.}{08-13map.png}
@@ -1284,12 +1284,12 @@ Variance in yaw once again dominated head movement for all participants during a
 
 %=====================
 
-Plots of position data upon the chapel floorplan show a similar relationship as was observed of some stage 1 participants (see section \ref{stage1-seated-vs-parallel-reality}) wherein participants approached the altar closely and even walked past it to inspect the far East walls of the chapel during the parallel reality scenarios, but did not do so during the seated scenario. This observation is of particular interest as walking up to the far East walls of the chapel during the parallel reality scenarios involved climbing a single (real) step - an action that intuitively one would think participants would not have enamoured the prospect of due to the nature of the video see-through solution and its associated drawbacks. Figures \ref{16-seatedmap.png} and \ref{16-50map.png} illustrate this relationship using participant 16 as an example, for the seated scenario and the 50/50 scenario respectively.
+Plots of position data upon the chapel floorplan show a similar relationship as was observed of some stage 1 participants (see section \ref{stage1-seated-vs-parallel-reality}) wherein participants approached the altar closely and even walked past it to inspect the far East walls of the chapel during the parallel reality scenarios, but did not do so during the seated scenario. This observation is of particular interest as walking up to the far East walls of the chapel during the parallel reality scenarios involved climbing a single (real) step - an action that intuitively one would think participants would not have enamoured the prospect of due to the nature of the video see-through solution and its associated drawbacks for ambulation. Figures \ref{16-seatedmap.png} and \ref{16-50map.png} illustrate this relationship using participant 16 as an example, for the seated scenario and the 50/50 scenario respectively.
 
 \TwoFig{splodge-maps/16-seatedmap.png}{Position data during seated scenario for participant 16.}{16-seatedmap.png}
        {splodge-maps/16-50map.png}{Position data during 50/50 scenario for participant 16.}{16-50map.png}
 
-Whilst one explanation for this behaviour, as touched upon in section \ref{stage1-seated-vs-parallel-reality}, is simply that the combination of real and virtual altar in the parallel reality scenarios drew the participants' attention more than just the virtual altar in the seated scenario did (enough to warrant the challenge of the step), an alternative explanation presents a more intriguing possibility. Many visitors to the chapel display a heightened reverence for the altar, not approaching it too closely nor stepping up to the platform it stands upon, presumably due to an overbearing assumption that it may be construed as disrespectful or against socially accepted etiquette to do so. However with a view that is constantly a mix of a real and a virtual environment, as in the parallel reality scenarios in this stage of the evaluation, it is conceivable that this reduced clarity or less `real' seeming nature of the altar could have led the participants to feel more comfortable to approach it more closely and even to mount its platform.
+Whilst one explanation for this behaviour, as touched upon in section \ref{stage1-seated-vs-parallel-reality}, is simply that the combination of real and virtual altar in the parallel reality scenarios drew the participants' attention more than just the virtual altar in the seated scenario did (enough to warrant the challenge of the step), an additional observation herein presents a somewhat intriguing possibility. Many visitors to the chapel display a heightened reverence for the altar, not approaching it too closely nor stepping up to the platform it stands upon, presumably due to an overbearing assumption that it may be construed as disrespectful or against socially accepted etiquette to do so. However with a view that is constantly a mix of a real and a virtual environment, as in the parallel reality scenarios in this stage of the evaluation, it is conceivable that this reduced clarity or less `real' seeming nature of the altar, along with the increased interest of the combined real and virtual views, could have led participants to feel more comfortable than non parallel reality visitors to approach it more closely and even to mount its platform.
 
 %=====================
 
@@ -1571,6 +1571,7 @@ Together, these investigations explored the two fundamental aspects of transitio
 	\item Both a 100\% RW and a 100\% VR view should be provided, though these do not have to be the default RW and VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing the same observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs and associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a video see-through HMD based parallel reality system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most comfortable.
 	\item A view that provides less than 100\% RW without the need to keep a control activated should be provided. Presenting VR visuals in this manner such that the user receives VR stimuli even without consciously thinking to perform a transition to VR or a RW/VR mix, has shown to have a positive effect both upon participant awareness of the VR content and upon the relationship between this content and the RW environment. It also promotes observation of RW vantages that might otherwise only be seen through VR. The balance between RW and VR visuals in such a view needs to be carefully considered, as although reducing RW visuals more led in the investigations to heightened awareness and understanding of the relationship between the environments, it was the less drastically reduced RW view that was preferred overall by participants.
 	\item A method of transitioning between default RW and VR positions that allows the user to both control the speed of the transition and to stop at any intermediary level between 100\%RW/0\%VR and 0\%RW/100\%VR should be provided. This style of transition was clearly the best received throughout the investigations and participants used this transition both to control the speed of transitions and to pause at intermediary opacities.
+	\item Where inaccuracies in the positioning solution result in the requirement to perform a large movement of the virtual vantage, this movement should be effected in such a manner that the user does not perceive an unpleasant set of virtual stimuli, such as rapidly moving a large distance through the virtual environment or moving `through' virtual objects. Techniques such as reverting to purely real world visuals, blurring, dimming or similarly obfuscating virtual world visuals for movements above a certain threshold distance present simple approaches to addressing this issue. Suitable notification should be presented to the user to explain the situation, similarly as suggested for sensor quality in handheld AR platforms~\cite{Billinghurst2014}.
 \end{enumerate}
 
 %=========================================================================================================
