--- a/bib.bib
+++ b/bib.bib
@@ -352,6 +352,15 @@ url = {https://journals.tdl.org/jvwr/article/view/6123},
 volume = {4},
 year = {2011}
 }
+@incollection{Billinghurst2014,
+author = {Billinghurst, M and Bai, H and Lee, G and Lindeman, R},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {37},
+editor = {Grimshaw, M},
+pages = {615--635},
+title = {{Developing Handheld Augmented Reality Interfaces}},
+year = {2014}
+}
 @article{Bishop2009,
 address = {Inderscience Publishers, Geneva, SWITZERLAND},
 annote = {        From Duplicate 1 (                           Enhancing the understanding of genres of web-based communities: the role of the ecological cognition framework                         - Bishop, Jonathan )
@@ -832,12 +841,6 @@ publisher = {Oxford University Press},
 title = {{The Virtuality and Reality of Avatar Cyberspace}},
 year = {2014}
 }
-@misc{Daviesb,
-author = {Davies, C J},
-title = {{Database as tar archive suitable for input into pg\_restore}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
-urldate = {2013-04-01}
-}
 @misc{Davies,
 author = {Davies, C J},
 title = {{Arduino sketch for Pangolin}},
@@ -854,6 +857,12 @@ urldate = {2013-04-01}
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
+urldate = {2013-04-01}
+}
+@misc{Daviesb,
+author = {Davies, C J},
+title = {{Database as tar archive suitable for input into pg\_restore}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {2013-04-01}
 }
 @inproceedings{Davies2012,
@@ -1201,13 +1210,6 @@ pages = {256},
 title = {{Mirror Worlds: or the Day Software Puts the Universe in a Shoebox...How It Will Happen and What It Will Mean}},
 year = {1993}
 }
-@misc{Gelissen2008,
-author = {Gelissen, Jean},
-publisher = {International Organization for Standardization},
-title = {{Summary of MPEG-V}},
-url = {http://mpeg.chiariglione.org/working\_documents.php},
-year = {2008}
-}
 @article{Gelissen2009,
 annote = {From Duplicate 1 ( Introduction to MPEG-V - Gelissen, Jean )},
 author = {Gelissen, Jean},
@@ -1218,6 +1220,13 @@ title = {{Introduction to MPEG-V}},
 url = {http://journals.tdl.org/jvwr/article/view/742/533},
 volume = {2},
 year = {2009}
+}
+@misc{Gelissen2008,
+author = {Gelissen, Jean},
+publisher = {International Organization for Standardization},
+title = {{Summary of MPEG-V}},
+url = {http://mpeg.chiariglione.org/working\_documents.php},
+year = {2008}
 }
 @article{Gelissen2011,
 abstract = {In this issue, we report on the first phase of MPEG-V, a work that started in 2007. MPEG-V was conceived as a unified effort to develop standards within virtual worlds, and between virtual worlds and real worlds. This work culminated in the publication of the ISO/IEC MPEG-V 'Media context and control' standards in January 2011. The papers in this issue of the Journal of Virtual World Research expose both the many current standards for virtual worlds, as well as the many missing standards. As such, the issue hints at many more places where standards are needed. To fulfill the potential of virtual worlds much more standardization (MPEG-V, and other standards) is needed.},
@@ -1391,17 +1400,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Hart,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {2013-04-01}
-}
 @misc{Harta,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-03-31}
+}
+@misc{Hart,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {2013-04-01}
 }
 @inproceedings{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -1554,6 +1563,19 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {2013-03-28},
 year = {2013}
 }
+@misc{Hughes2006,
+author = {Hughes, Ian},
+title = {{Lessons from second life}},
+url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
+year = {2006}
+}
+@misc{Hughes2009,
+author = {Hughes, Ian},
+title = {{Wimbledon – A fanployee perspective}},
+url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
+urldate = {2012-05-21},
+year = {2009}
+}
 @misc{Hughes2006c,
 author = {Hughes, Ian},
 title = {{Wimbledon in Second Life}},
@@ -1574,19 +1596,6 @@ title = {{Well it got my attention – Second Life}},
 url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
 urldate = {2012-05-21},
 year = {2006}
-}
-@misc{Hughes2006,
-author = {Hughes, Ian},
-title = {{Lessons from second life}},
-url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
-year = {2006}
-}
-@misc{Hughes2009,
-author = {Hughes, Ian},
-title = {{Wimbledon – A fanployee perspective}},
-url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
-urldate = {2012-05-21},
-year = {2009}
 }
 @misc{Hunt,
 author = {Hunt, Darran},
@@ -2142,18 +2151,6 @@ title = {{The digital Michelangelo project: 3D scanning of large statues}},
 url = {http://dl.acm.org/citation.cfm?id=344779.344849 http://dx.doi.org/10.1145/344779.344849},
 year = {2000}
 }
-@incollection{Liestøl2012,
-author = {Liest\o l, Gunnar},
-booktitle = {Progress in Cultural Heritage Preservation},
-doi = {10.1007/978-3-642-34234-9\_64},
-editor = {Ioannides, M and Fritsch, D and Leissner, J and Davies, R and Remondino, F and Caffo, R},
-isbn = {978-3-642-34233-2},
-pages = {618--627},
-publisher = {Springer Berlin Heidelberg},
-title = {{Solving the Centre–Periphery Problem in Cultural Heritage by Means of Situated Simulations}},
-url = {http://link.springer.com/chapter/10.1007/978-3-642-34234-9\_64},
-year = {2012}
-}
 @inproceedings{Liestøl2009,
 abstract = {In digital media - including augmented reality research - rapid change continue to take place at the levels of hardware and software. This paper focus on a third layer in a hierarchy of digital media - meaningware. Meaningware is the domain of digital textuality, its genres and conventions - all key subject matters of the humanities. To prevent cultural lag at the textual level the conduct of genre design is suggested as a methodological approach. The potential 'genre' experimented with here is a type of augmented reality system we have named Situated Simulations. The system takes advantage of the convergence of mobility, broadband, rich graphics capabilities and positioning/orientation technologies, on off the shelf mobile phones. The current platform applied is Apple's iPhone. The paper describes the development of three prototyped situated simulations designed for use in both learning and tourism. Interface and design issues are discussed, and a perspective on the epistemological increment of augmented reality and situated simulations is related to Bateson's notion of double descriptions.},
 author = {Liest\o l, Gunnar},
@@ -2177,6 +2174,18 @@ publisher = {Springer New York},
 title = {{Situated Simulations Between Virtual Reality and Mobile Augmented Reality: Designing a Narrative Space}},
 url = {http://link.springer.com/chapter/10.1007\%2F978-1-4614-0064-6\_14},
 year = {2011}
+}
+@incollection{Liestøl2012,
+author = {Liest\o l, Gunnar},
+booktitle = {Progress in Cultural Heritage Preservation},
+doi = {10.1007/978-3-642-34234-9\_64},
+editor = {Ioannides, M and Fritsch, D and Leissner, J and Davies, R and Remondino, F and Caffo, R},
+isbn = {978-3-642-34233-2},
+pages = {618--627},
+publisher = {Springer Berlin Heidelberg},
+title = {{Solving the Centre–Periphery Problem in Cultural Heritage by Means of Situated Simulations}},
+url = {http://link.springer.com/chapter/10.1007/978-3-642-34234-9\_64},
+year = {2012}
 }
 @incollection{Liestøl2014,
 author = {Liest\o l, Gunnar and Morrison, A},
@@ -2207,23 +2216,6 @@ url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\
 urldate = {2012-05-21},
 year = {2006}
 }
-@misc{Lifton2009a,
-author = {Lifton, Joshua},
-publisher = {Meta Institute for Computational Astrophysics (MICA)},
-title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
-url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
-year = {2009}
-}
-@phdthesis{Lifton2007a,
-address = {Department of Media Arts and Sciences},
-annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
-author = {Lifton, Joshua},
-month = sep,
-school = {Massachusetts Institute of Technology},
-title = {{Dual Reality: An Emerging Medium}},
-type = {Ph.D. Dissertation},
-year = {2007}
-}
 @inproceedings{lifton:adoption,
 annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
                 
@@ -2253,6 +2245,23 @@ publisher = {IEEE},
 title = {{Consumer Adoption of Cross Reality Systems}},
 url = {http://dl.acm.org/citation.cfm?id=1848072.1848338},
 year = {2010}
+}
+@misc{Lifton2009a,
+author = {Lifton, Joshua},
+publisher = {Meta Institute for Computational Astrophysics (MICA)},
+title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
+url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
+year = {2009}
+}
+@phdthesis{Lifton2007a,
+address = {Department of Media Arts and Sciences},
+annote = {From Duplicate 1 ( Dual Reality: An Emerging Medium - Lifton, Joshua )},
+author = {Lifton, Joshua},
+month = sep,
+school = {Massachusetts Institute of Technology},
+title = {{Dual Reality: An Emerging Medium}},
+type = {Ph.D. Dissertation},
+year = {2007}
 }
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
@@ -2500,6 +2509,11 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
+}
 @article{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas: 1. the idea of constructing special eyeglasses to modify how he saw the world; and 2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life. Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.},
 author = {Mann, Steve},
@@ -2508,11 +2522,6 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
-}
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
 }
 @article{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2706,17 +2715,17 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
+@misc{mit:doppel,
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
+title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
+}
 @misc{MIT,
 annote = {From Duplicate 1 ( Responsive Environments Group - MIT )},
 author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
 title = {{Responsive Environments Group}},
 url = {http://www.media.mit.edu/resenv/}
-}
-@misc{mit:doppel,
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
-title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2886,15 +2895,6 @@ pages = {165--174},
 title = {{Supporting interoperability and presence awareness in collaborative mixed reality environments}},
 year = {2013}
 }
-@article{Papagiannakis2009,
-abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
-author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
-journal = {Arqueologica 2.0},
-pages = {16--20},
-title = {{Recreating Daily Life in Pompeii}},
-volume = {1},
-year = {2009}
-}
 @article{Papagiannakis2007,
 abstract = {We propose a new methodology for real-time mobile mixed reality systems that feature realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. Although ini- tially targeted at Cultural Heritage Sites, the paradigm is by no means limited to such subjects. The abandonment of traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations with 3D, interactive, augmented histori- cal character-based event representations in a mobile and wearable setup, is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with character to object interaction, a markerless camera tracker specialized for non-invasive geometrical registration on heritage sites and a PRT mixed reality illumination model for more consistent real-virtual real-time rendering. We demonstrate a real-time case study on the actual site of ancient Pompeii. PDF},
 author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
@@ -2907,6 +2907,15 @@ title = {{Mobile Augmented Heritage: Enabling Human Life in Ancient Pompeii}},
 url = {http://openurl.ingenta.com/content/xref?genre=article\&issn=1478-0771\&volume=5\&issue=2\&spage=396},
 volume = {5},
 year = {2007}
+}
+@article{Papagiannakis2009,
+abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
+author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
+journal = {Arqueologica 2.0},
+pages = {16--20},
+title = {{Recreating Daily Life in Pompeii}},
+volume = {1},
+year = {2009}
 }
 @article{Papagiannakis2005,
 abstract = {This paper presents an innovative 3D reconstruction of ancient fresco paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial-life dramaturgical behaviours in an immersive, fully mobile augmented reality (AR) environment. The main goal is to push the limits of current AR and virtual storytelling technologies and to explore the processes of mixed narrative design of fictional spaces (e.g. fresco paintings) where visitors can experience a high degree of realistic immersion. Based on a captured/real-time video sequence of the real scene in a video-see-through HMD set-up, these scenes are enhanced by the seamless accurate real-time registration and 3D rendering of realistic complete simulations of virtual flora and fauna (virtual humans and plants) in a real-time storytelling scenario-based environment. Thus the visitor of the ancient site is presented with an immersive and innovative multi-sensory interactive trip to the past. Copyright (c) 2005 John Wiley T Sons, Ltd.},
@@ -3160,17 +3169,6 @@ publisher = {Springer-Verlag},
 title = {{Cyberspace as Representation of Space Experience: In Defence of a Phenomenological Approach}},
 year = {2002}
 }
-@misc{Regenbrecht2002a,
-abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
-author = {Regenbrecht, Holger and Schubert, Thomas},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-issn = {1054-7460},
-number = {4},
-pages = {425--434},
-title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
-volume = {11},
-year = {2002}
-}
 @article{Regenbrecht1992,
 author = {Regenbrecht, Holger and Schubert, Thomas},
 keywords = {augmented reality,sense of presence},
@@ -3181,6 +3179,17 @@ year = {1992}
 author = {Regenbrecht, Holger and Schubert, Thomas},
 booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
 title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
+year = {2002}
+}
+@misc{Regenbrecht2002a,
+abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
+author = {Regenbrecht, Holger and Schubert, Thomas},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+issn = {1054-7460},
+number = {4},
+pages = {425--434},
+title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
+volume = {11},
 year = {2002}
 }
 @article{Reilly2010,
@@ -3231,6 +3240,14 @@ title = {{Responsive Environments Group - Research Themes}},
 url = {http://resenv.media.mit.edu/motto.html},
 urldate = {2012-05-18}
 }
+@book{Rheingold1992,
+author = {Rheingold, Howard},
+isbn = {978-0671778972},
+pages = {416},
+publisher = {Simon \& Schuster},
+title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
+year = {1992}
+}
 @book{Rheingold2000,
 address = {Cambridge, MA},
 author = {Rheingold, Howard},
@@ -3240,14 +3257,6 @@ pages = {447},
 publisher = {The MIT Press},
 title = {{The Virtual Community: Homesteading on the Electronic Frontier}},
 year = {2000}
-}
-@book{Rheingold1992,
-author = {Rheingold, Howard},
-isbn = {978-0671778972},
-pages = {416},
-publisher = {Simon \& Schuster},
-title = {{Virtual Reality: The Revolutionary Technology of Computer-Generated Artificial Worlds - and How It Promises to Transform Society}},
-year = {1992}
 }
 @inproceedings{Richardson2004,
 address = {New York, New York, USA},
@@ -3848,6 +3857,16 @@ title = {{TinyOS Home Page}},
 url = {http://www.tinyos.net/},
 urldate = {2012-02-22}
 }
+@incollection{Turkle2004,
+author = {Turkle, Sherry},
+booktitle = {Community in the Digital Age: Philosophy and Practice},
+chapter = {6},
+editor = {Feenberg, Andrew and Barney, Darin},
+pages = {101--117},
+publisher = {Rowman \& Littlefield},
+title = {{Our Split Screens}},
+year = {2004}
+}
 @book{Turkle2011,
 author = {Turkle, Sherry},
 pages = {384},
@@ -3864,16 +3883,6 @@ publisher = {Simon \& Schuster},
 title = {{Life on the Screen}},
 year = {1997}
 }
-@incollection{Turkle2004,
-author = {Turkle, Sherry},
-booktitle = {Community in the Digital Age: Philosophy and Practice},
-chapter = {6},
-editor = {Feenberg, Andrew and Barney, Darin},
-pages = {101--117},
-publisher = {Rowman \& Littlefield},
-title = {{Our Split Screens}},
-year = {2004}
-}
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
 booktitle = {Virtual Space: Spatiality in Virtual Inhabited 3D Worlds},
@@ -3883,6 +3892,12 @@ pages = {258--284},
 publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as ``Space of Illusion'' in Museum Displays}},
 year = {2002}
+}
+@misc{U-bloxAG2012,
+author = {u-blox AG},
+title = {{MAX-6 Product Summary}},
+url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
+year = {2012}
 }
 @misc{U-bloxAGa,
 author = {u-blox AG},
@@ -3895,12 +3910,6 @@ author = {u-blox AG},
 title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {2013-02-11}
-}
-@misc{U-bloxAG2012,
-author = {u-blox AG},
-title = {{MAX-6 Product Summary}},
-url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
-year = {2012}
 }
 @misc{UgoTrade2007,
 annote = {From Duplicate 1 ( EOLUS Makes Leap To 3D Internet On Second Life - UgoTrade )},
